dev/dbsts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: hamayundb1
  name: hamayundb1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hamayundb1
  template:
    metadata:
      labels:
        app: hamayundb1
    spec:
      containers:
      - image: mysql
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: hamayun-mysql-storage
          mountPath: /var/lib/mysql/hamayun
