dev/pavbhajiservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pavbhaji
  name: pavbhaji
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pavbhaji
  type: NodePort
status:
  loadBalancer: {}
