dev/ingressrules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hanatwest
spec:
  ingressClassName: nginx
  rules:
  - host: www.hamayun1.co.uk
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pavbhaji
            port:
              number: 80
